--- a/assets/main.scss
+++ b/assets/main.scss
@@ -10,6 +10,12 @@ $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
+$background-color: #1a2629 !default;
+$text-color: #bad2c7 !default;
+
+$grey-color:       #828282 !default;
+$grey-color-dark: #c50000;
+
 $spacing-unit:     30px;
 
 // Width of the content area
